syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";


package special_app_v1;

option go_package = "special_admin/pkg/proto/v1;special_admin_v1";

service SpecialAdminService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }


  rpc GetEventInfo(GetEventInfoRequest) returns (GetEventInfoResponse) {
    option (google.api.http) = {
      get: "/v1/events/{id}"
    };
  }
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse) {
    option (google.api.http) = {
      get: "/v1/events"
    };
  }
  rpc CreateEvent(CreateEventRequest) returns (GetEventInfoResponse) {
    option (google.api.http) = {
      post: "/v1/events"
      body: "*"
    };
  }
  rpc UpdateEvent(UpdateEventRequest) returns (GetEventInfoResponse) {
    option (google.api.http) = {
      patch: "/v1/events/{id}"
      body: "*"
    };
  }
  rpc DeleteEvent(DeleteEventRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/events/{id}"
    };
  }

  rpc CreateEventPicture(CreatePictureRequest) returns (GetEventInfoResponse) {
    option (google.api.http) = {
      post: "/v1/event_pictures"
      body: "*"
    };
  }
  rpc DeleteEventPicture(DeletePictureRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/event_pictures/{id}"
    };
  }


  rpc GetItemInfo(GetItemInfoRequest) returns (GetItemInfoResponse) {
    option (google.api.http) = {
      get: "/v1/items/{id}"
    };
  }
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse) {
    option (google.api.http) = {
      get: "/v1/items"
    };
  }
    rpc CreateItem(CreateItemRequest) returns (GetItemInfoResponse) {
    option (google.api.http) = {
      post: "/v1/items"
      body: "*"
    };
  }
  rpc UpdateItem(UpdateItemRequest) returns (GetItemInfoResponse) {
    option (google.api.http) = {
      patch: "/v1/items/{id}"
      body: "*"
    };
  }
  rpc DeleteItem(DeleteItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/items/{id}"
    };
  }

  rpc CreateItemPicture(CreatePictureRequest) returns (GetItemInfoResponse) {
    option (google.api.http) = {
      post: "/v1/item_pictures"
      body: "*"
    };
  }
  rpc DeleteItemPicture(DeletePictureRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/item_pictures/{id}"
    };
  }


  rpc GetOrderInfo(GetOrderInfoRequest) returns (GetOrderInfoResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{id}"
    };
  }
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/orders"
    };
  }
  rpc UpdateOrder(UpdateOrderRequest) returns (GetOrderInfoResponse) {
    option (google.api.http) = {
      patch: "/v1/orders/{id}"
      body: "*"
    };
  }
  rpc DeleteOrder(DeleteOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/orders/{id}"
    };
  }
}

// pictures

message LittlePictureInfo {
  bytes picture = 1;
  string mime_type = 2;
}

message PictureInfo {
  string id = 1;
  bytes picture = 2;
  string mime_type = 3;
}

message CreatePictureRequest {
  string parent_id = 1;
  LittlePictureInfo picture = 2;
}

message DeletePictureRequest {
  string id = 1;
}

// Users

message GetUsersRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message UserInfo{
  string name = 1;
  string surname = 2;
  string nickname = 3;
  string phone_number = 4;
}

message GetUsersResponse {
  repeated UserInfo users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 per_page = 4;
}

// Events

message GetEventInfoRequest {
  string id = 1;
}

message GetEventsRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message CreateEventRequest {
  string title = 1;
  string description = 2;
  google.protobuf.Timestamp datetime = 3;
  google.protobuf.Int64Value price = 4;
  int32 total_seats = 5;
  google.protobuf.Int64Value occupied_seats = 6;
  LittlePictureInfo little_picture = 7;
}

message UpdateEventRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional google.protobuf.Timestamp datetime = 4;
  google.protobuf.Int64Value price = 5;
  optional int32 total_seats = 6;
  google.protobuf.Int64Value occupied_seats = 7;
  optional LittlePictureInfo little_picture = 8;
}

message DeleteEventRequest {
  string id = 1;
}

message UserEventInfo {
  string id = 1; 
  string user_nickname = 2;
  int32 number_of_guests = 3;
}

message GetEventInfoResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp datetime = 4;
  int32 price = 5;
  int32 total_seats = 6;
  int32 occupied_seats = 7;
  LittlePictureInfo little_picture = 8;
  repeated PictureInfo pictures = 9;
  repeated UserEventInfo userEvents = 10;
}

message EventInfoForList {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp datetime = 3;
  int32 price = 4;
  int32 total_seats = 5;
  int32 occupied_seats = 6;
  LittlePictureInfo little_picture = 7;
}

message GetEventsResponse {
  repeated EventInfoForList events = 1;
  int32 total = 2;
  int32 page = 3;
  int32 per_page = 4;
}

// Item

message GetItemInfoRequest {
  string id = 1;
}

message GetItemsRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message CreateItemRequest {
  string title = 1;
  string description = 2;
  int32 price = 3;
  LittlePictureInfo little_picture = 4;
}

message UpdateItemRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  int32 price = 4;
  optional LittlePictureInfo little_picture = 5;
}

message DeleteItemRequest {
  string id = 1;
}

message GetItemInfoResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 price = 4;
  LittlePictureInfo little_picture = 5;
  repeated PictureInfo pictures = 6;
}

message ItemInfoForList {
  string id = 1;
  string title = 2;
  int32 price = 3;
  LittlePictureInfo little_picture = 4;
}

message GetItemsResponse {
  repeated ItemInfoForList items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 per_page = 4;
}

// Order

message GetOrderInfoRequest {
  string id = 1;
}

message GetOrdersRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message UpdateOrderRequest {
  string id = 1;
  optional string status = 2;
  optional string comment = 3;
}

message DeleteOrderRequest {
  string id = 1;
}

message OrderItemInfoForList {
  string id = 1;
  string item_id = 2;
  string title = 3;
  int32 price = 4;
  int32 quantity = 5;
  LittlePictureInfo little_picture = 6;
}

message GetOrderInfoResponse {
  string id = 1;
  string number = 2;
  string user_nickname = 3;
  google.protobuf.Timestamp form_date = 4;
  google.protobuf.Timestamp completion_date = 5;
  string comment = 6;
  string status = 7;
  int32 order_amount = 8;
  repeated OrderItemInfoForList items = 9;
}

message OrderInfoForList {
  string id = 1;
  string number = 2;
  google.protobuf.Timestamp completion_date = 3;
  string status = 4;
  int32 order_amount = 5;
}

message GetOrdersResponse {
  repeated OrderInfoForList orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 per_page = 4;
}